selenium  eklendi bağlantılar ve testler yapıldı

--- a/MetodWhatsAppDesktop/MainForm.resx
+++ b/MetodWhatsAppDesktop/MainForm.resx
@@ -124,30 +124,30 @@
   <data name="btnGetProducts.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGWSURBVDhPtZDJSwJxFMen9VK00L3FqEahGuhgWTAJtlBG
-        FphEpEWp0UGsoFso2UHrELRQl07ReigopGzBIunUuaD/5b3X/PJlC62HPvBlvu/zfr8ZGOlfMAQou2Sc
-        FJ2Piln9nkovNlZ5IFLhRXeVB8dkD8zVeSiL199jsFO2yUVhkwsWTE40C9fgIrnBCRHNhbQe1PZDkkRp
-        zxc+0mEnxdqPo50Oamb1TJcDR+zay8XT2ofDVgdO8uoV7UDGoA17XT04wOpTnDaIDHZTkMckUy2Y42uH
-        FX8bdk+2ksz6S/ztEOKaJKiiO2TGEh5/ZFbFmYD65kMr9ehdM1IpjymmE3AiwmOKRZUKlo1v/sO+gXJ3
-        amB1q5ZsuwpZRLaqqTByBXER0V+8yLZC4T0FDXw9SUCi9FMZ1mMyLMX0FD6vIN3GBcRFRBdO28/H9HB2
-        LmMRX3tPXKXMGx013ZaRJTqPjYdReBARXbhEOZrvdJTPx78ncYQTiWMikZtj9LP+PRSg9PsDuHw4gGvR
-        Wf+Nx03ME+HxP5CkJxDyzbWVKKYKAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGXSURBVDhPtZDLLwNRFIfHc0M8Yu8xUqZNMIkFWslo4hUq
+        LUk1IlqCViykKrGTadSiZSGhwsZKPBeVaIQqKdFYWZP4W9xzzNWDEs+FL/llfuc7984kI/wLBhVzyyZR
+        FqewlNTvqfKAqdrNQjoPjFe7YUJys4V6N+bQ+nsMdsw1ujBodLEloxPM3DW5UGpyspDmAlr3a/thQcCM
+        5wsf6bKjbBmAsW4HtpB6pscBo3bt5fxp6YcRiwN8tHpDO5A1ZIM+Vy8MkvoUp42FhqzopzHFTBvkTXWy
+        sLcDrL52lEh/ibeTBaim8CswHjBDGY0/Mq/AnKqkfSjcCJ71Biyn8ZXZJDvhofGVZQWLVhvS/sOBAfN3
+        a9nadh3a9mRs5dmuweLQJUvw8P7ieXZkDO7LYKDrKVQBM08lthGT2EpMj8G4DsXNc5bg4Z07bb8Y07Oz
+        uAQldO09CQWzr0VsvqnA1uNFMB0eP97z8M5dshLMtyIW0vHvSR7BdDKKyHMdBS/p34MqZt5F2MV95PGK
+        d9J/42ELCnho/A8E4QkOCs2yJHKSmwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnSendProducts.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIzSURBVDhPtYzdS5NhGMZf+yAYSR90ItmHYLittijdTBEl
-        W2YicwQbOadz4BZbeZI2tcgpm/kR5kfhMtZqoRC+kASBwzwrM6STDtrfkR13X3fPu542jOiofnBxP/fv
-        uZ5H+U9wQXEQlsM30FF8Hb7ibtQpEd4lL/+O4Rqa9AG6rw/gpkifljI/egx+Hivr4k5Z+zMWL/wi3VYf
-        TVb6OGD1wVjuZb2YrZZOmrJ0okucB2V9O7ZWrql3o6feTbPNAdZJncPp5J0X3DRic8Nf3waP1HlaXDTR
-        4qR7djsK48u8NPeKZuVVDu0Th5OmHC4ei0R4h9SK0trMh9oduONxYGB+nnenXtL3hSXaYuYCWcnR4YDH
-        04Jejx2VUilKsBGW4GUMBJtwRduXF+n960VSs5e/EbqEk1o31Ig2qRQlLGSfjftv2dCu7WvPYV5N0be1
-        F7iq7atJmN7O8z7t3NeA0+GLGAjb4NL2LJFy1sVqEYnWUUwq5WMCDZtPaEvkzUaCv2rZTOKI6IWitQiP
-        1MAoqz+ZqabR6SrcnTyHg1IpmccoyszR+Jc4fc7EKfnMy/unq2hipooeyEqepxUUTVYgMlOKPY+MvFfq
-        HIlqFIrOQ9HpTZzFeanzqGaKqacoJWZUNfGQaqJhMZ2qGc1LZu4X+6hqwm0Rr3ySZ9WAEysGSokMp/UU
-        TZfR+IqBh9J6DP6awk+kjbDKJ9vZOMbH10txRq5ZPhWx7kMJTOslsLw7ygek/tcoyg+80RvB0RsPGwAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAI4SURBVDhPtYzdS5NRHMcfeyGQpBe6kdaLYOyltiidNhGl
+        tcxk6Ag2ck63gVvM8iZtuiKnTFMX5kuhTdZykQR7IAkCh3lXWoxuumh/R3b9nO+v89hpw4iu6gM/fuf7
+        Od9zpP8ElWhCMB+9hS7NTfg1vWiUorRHXP4d/Q206ILsoS6I23wG1NEG0KcP0IS2m3yi9mfMXgT49Nb4
+        2VStn4I1fhiqvKTju93sY9NmH7r5eUjUd2Jrp3qrG31WN5uzB6lU6AJOJ+2+5GZjNjcC1g54hC7S5mLx
+        Nid70NqKsoUVysy/ZnPiqoD6icPJph0umohGaZfQktRupyOdDtzzOBBJJGjv0itFeZlRtoioRFQKdDng
+        8bSh39OKWqEkKdQMc+gqIqEWXFPzyrLy4c0yk7cvf6PnCk6r3Z5mdAglSWEuB2w0eMeGTjWvL8G0lla+
+        r7/AdTWvpWB8l6AD6nmgCWfDlxEJ2+BS8zbRKiodbUA01shGhZI+JdGUW1S2covs7WaSvqmTS+EY7/XE
+        GhAeq4dBVH8yW8fGZyy4P3UBh4WS8k9Rnp9nk18XlC/5BZZ67qWDMxYWn7WwR6JS5Fk1i6WqEZ2txL4n
+        BtovdIFkHcp45zHv9CfP46LQRWQTG5XPsDTfMdlIw7KRjfDtlE2wZ0w0yPO4bMRdPl7xpMiaHqdW9SzN
+        ZySrY7Gslk2u6mk4q8PQr819PGtAjXiyk48n6ORGJc6JuM3ncirdrIBxowLm98fpkND/Gkn6AaigG7cq
+        /h/1AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="colSelect.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -164,21 +164,6 @@
   </metadata>
   <metadata name="bsPhone.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>229, 17</value>
-  </metadata>
-  <metadata name="colSelect.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Beden.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="bsProduct.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>122, 17</value>
-  </metadata>
-  <metadata name="bsPhone.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>229, 17</value>
-  </metadata>
-  <metadata name="colPhoneSec.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>31</value>
