uygulama iconu güncellendi

--- a/MetodWhatsAppDesktop/MainForm.resx
+++ b/MetodWhatsAppDesktop/MainForm.resx
@@ -130,6 +130,82 @@
     <value>63</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8mvwD/Jr8B/ybABP8kwgD/JMMAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/ya+AP8mvwL/J71w/ye9h/8nvEz/J7wg/ye8B/8p
+        tAD/JcMA/ye8AP8nvQL/J7wY/ye8QP8nvWX/J716/ye9ff8nvW7/J7xO/ye8Jv8nvAf/J7sA/yXCAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/J70A/yi6AP8ounL/KLr//yi69v8o
+        ut7/KLqz/ym5fP8puET/Kbg+/yi5kP8outT/KLrz/yi6/f8ouv//KLr//yi6/v8ouvj/KLrj/yi6rv8p
+        uVb/KbgO/ym3AP8nvwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/KrYA/yq2Of8q
+        tu7/Krb+/yq2/v8qtv//Krb+/yq29P8qtvH/Krb+/yq2/v8qtv3/Krb8/yq2/f8qtv3/Krb8/yq2/f8q
+        tv7/Krb//yq29/8qtbX/K7Q7/yyxAf8rswAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8s
+        sgD/LLIT/yyxzP8ssf//LLH8/yyx/f8ssf3/LLH9/yyx/f8ssfz/LLH8/yyx/P8ssfz/LLH9/yyx/f8s
+        sfz/LLH8/yyx/P8ssfz/LLH9/yyx//8sseT/LbBg/y6tA/8trgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/y2uAP8g5AD/LqyX/y6s//8urP3/Lqz8/y6s/P8urPz/Lqz8/y6s/P8urP3/Lqz+/y6s//8u
+        rP//Lqz//y6s//8urP7/Lqz9/y6s/P8urPz/Lqz8/y6s//8urPD/L6pl/zGjAf8wqQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/MKkA/zGmAP8xplz/Mab6/zGm/f8xpvz/Mab+/zGm/v8xpv3/Mab+/zGm//8x
+        pv//Mab//zGm//8xpv//Mab//zGm//8xpv//Mab//zGm/f8xpvz/Mab8/zGm/v8xpun/MaRI/zGmAP8y
+        owAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/M6AA/zOgKv80n+b/NJ/+/zSf/P80n/3/MZ7//zCe//8x
+        nv//NJ///zSf//80n///NJ///zSf//80n///NJ///zGe//8wnv//MZ7//zSf/f80n/z/NJ/8/zSf//80
+        n8j/NZ0a/zWdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP83mAD/N5g4/zaZ6/82mf7/Npn8/zaZ/f9h
+        sP//e73//2+3//88nP//Npn//zaZ//82mf//Npn//zaZ//87nP//bbb//3u9//9ksf//N5n//zaZ/f82
+        mfz/Npn9/zaZ/P83mHX/NZwA/ziVAAAAAAAAAAAAAAAAAAAAAAD/O48A/3weAP86kY//OZL//zmS/P85
+        kvz/OpP+/7jY////////3+3//0uc//84kf//OZL//ziR//85kv//OJH//0ia///b6////////7/c//88
+        k///OZL//zqS/f86kvz/OpL//zmSzf87kBb/OpAAAAAAAAAAAAAAAAAAAAAAAP89iQD/PYkY/z2K0v89
+        iv//PYr8/z2K/f8+i///utb////////h7f//T5X//zuJ//9Ajf//XJ7//z+M//88if//TJP//93q////
+        ////wdr//0CM//89iv//PYr+/z2K/P89iv3/PYr1/z2KSv89igAAAAAAAAAAAAAAAAAAAAAA/0CCAP9A
+        gj7/QIPy/0CD/f9Ag/z/QIP+/0GE//+70////////+Ls//9Rjv//QIP//5G4///n8P//h7L//z6C//9O
+        jP//3en////////C1///Q4X//0CD//9Ag///QIP8/0CD/P9Ag///QIOB/0CEAP9CgAAAAAAAAAAAAAAA
+        AAD/Q3wA/0N8Yv9DfP3/Q3z8/0N8/P9DfP7/RH3//7zR////////4uv//1WI//+NsP//9Pj////////w
+        9f//g6n//1CE///e6P///////8PV//9Ffv//Q3z//0N8//9DfP3/Q3z8/0N8//9DfKf/RHgC/0R6AAAA
+        AAAAAAAAAAAAAP9GdAD/RnR3/0Z0//9GdP3/RnT9/0Z0//9Hdf//vc7////////X4f//mbP///P2///7
+        +///7PD///7+///t8v//jKn//9fg////////xNP//0h2//9GdP//RnT//0Z0/f9GdPz/RnT//0Z0uv9G
+        cwj/RnMAAAAAAAAAAAAAAAAA/0psAP9KbHr/Smz//0ps/f9KbP3/Smz//0tt///AzP//7O///77K///v
+        8v//197//42h//9ng///sr////j5///s8P//u8j///Hz///G0f//TG7//0ps//9KbP//Smz9/0ps/f9K
+        bP//Smy8/0psCf9KbAAAAAAAAAAAAAAAAAD/TWQA/01kbP9NZP7/TWT8/01k/P9NZP//T2X//664//++
+        xv//x87//5Kf//9Zb///SmL//0tj//9QZ///jpz//+jq///r7v//wMj//8DI//9Ua///TGT//01k//9N
+        ZP3/TWT8/01k//9NZLD/TGYE/0xmAAAAAAAAAAAAAAAAAP9QXQD/UF1O/1Bd+P9QXf3/UF38/1Bd/v9Q
+        Xf//dH3//4WN//9fav//Tlv//09c//9QXf//UF3//1Bd//9OW///cHn//8vO///n6f//t7z//3yG//9P
+        XP//UF3//1Bd/P9QXfz/UF3//1Bdkf9RWgD/T18AAAAAAAAAAAAAAAAA/1NWAP9TVif/U1bj/1NW/v9T
+        Vvz/U1b9/1NW//9VV///UlX//1JV//9TVv//U1b//1NW//9TVv//U1b//1NW//9RVP//XV///6en///a
+        2///oKL//1xe//9SVf7/U1b8/1NW/f9TVvv/U1Zg/1NVAP9SWQAAAAAAAAAAAAAAAAD/VVEA/1VSB/9X
+        Tq//Vk7//1ZO/P9WTvz/V07//1ZO//9XTv//V07//1dO//9XTv//V07//1dO//9XTv//V07//1dO//9W
+        Tf//Vk7//4V+///Bvf//gHv//1VM/f9WTvz/Vk7+/1dO4f9WUCj/Vk8AAAAAAAAAAAAAAAAAAAAAAP9Y
+        SgD/WkcA/1lIWf9aR/f/Wkf9/1pH/P9aR/3/Wkf//1pH//9aR///Wkf//1pH//9aR///Wkf//1pH//9a
+        R///Wkf//1pH//9aR///V0X//21d//+dkv7/dGX9/1lH/f9aR///WUib/1dOA/9YSgAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP9bQwD/W0MQ/1xBuf9cQf//XEH8/1xB/P9cQf3/XEH//1xB//9cQf//XEH//1xB//9c
+        Qf//XEH//1xB//9cQf//XEH//1xB//9cQf//Wz/+/2JH/f94Yf3/Y0n+/1xA5v9cQjf/XEIA/1xCAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/14+AP9fOwD/XjxA/1865/9fOv//Xzr8/186/P9fOv3/Xzr//186//9f
+        Ov//Xzr//186//9fOv//Xzr//186//9fOv//Xzr//186/v9fOvz/Xzr8/186/f9hPPv/Xzt7/1tGAf9e
+        PQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/2A3AP9dQgH/YTZn/2I08/9iNP7/YjT9/2I0/P9i
+        NP3/YjT+/2I0//9iNP//YjT//2I0//9iNP//YjT//2I0/v9iNP3/YjT8/2I0/P9iNP3/YjT+/2E1of9h
+        Nw7/YTcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/2MyAP9iMwX/YzBu/2Qv7v9k
+        L///ZC/9/2Qv/P9kL/z/ZC/8/2Qv/f9kL/3/ZC/8/2Qv/f9kL/z/ZC/8/2Qv/P9kL/z/ZC/+/2Qv+/9k
+        MKL/YzEW/2MxAP9lLgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/2UtAP9k
+        LgP/ZSxQ/2Yr0P9mKv7/Zir//2Yq/f9mKvz/Zir9/2Yq/P9mKvz/Zir9/2Yq/P9mKv3/Zir+/2Yq//9m
+        Kun/Zit9/2UtD/9lLQD/ZyYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/2cnAP9nKAD/Zygf/2gngP9oJtb/aCb5/2gm//9oJv//aCb//2gm//9oJv//aCb//2gm/f9o
+        Jub/aCeh/2coOv9nKAP/ZygAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP9pIwD/aSMB/2kkHP9pJFX/aSON/2kjsv9pI8P/aSPF/2kjuf9p
+        I5v/aSNp/2kkLf9pJAX/aSQA/24XAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/2wdAP9tHAD/ayAF/2ohDP9q
+        IQ3/aiAH/2wfAf9rHwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////P////wOAH/+AAAf/gAAB/4AAAP/AAAB/wAAAf8AAAD/AA
+        AA/wAAAH4AAAB+AAAAfgAAAD4AAAA+AAAAPgAAAD4AAAB+AAAAfgAAAH8AAAB/AAAA/4AAAP+AAAH/wA
+        AD/+AAB//4AA///AA////B////////////8=
+</value>
+  </data>
   <data name="btnNew1.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACB0RVh0VGl0
